Задание исправлены