@@ -21,7 +21,7 @@ public class Task4 implements Task {
     // !!! Редактируйте этот метод !!!
     private List<ApiPersonDto> convert(List<Person> persons) {
 
-        return persons.stream().map(Task4::convert).collect(Collectors.toList());
+        return persons.stream().map(Task4::convert).toList();
     }
 
     private static ApiPersonDto convert(Person person) {
